feat: add auth header
